--- a/adminka/package.json
+++ b/adminka/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat",
+  "name": "adminka",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,9 +10,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-router": "^6.14.2",
-    "react-router-dom": "^6.14.2",
+    "react-redux": "^8.1.2",
+    "react-router": "^6.15.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "router": "^1.3.8",
+    "router-dom": "^2.2.11",
+    "sass": "^1.65.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
